after these changes, we are going to start WINNING again

--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -132,7 +132,7 @@ Participants in their experiment were exposed to members of two experimenter-def
 
 Because each experimenter-defined category in the \cite{jern2013probabilistic} experiment possessed a distinct hue shared by all members of the category, it is sensible that participants might generate a category with a hue distinct from the experimenter-provided categories. If creative generation were influenced by category contrast in this way, the hues of generated categories should be systematically different from those of the experimenter-defined categories. Unfortunately, stimulus hue was encoded and presented in the Hue-Saturation-Value (HSV) color space, which is device-dependent and not perceptually normed such that perceived color similarity corresponds to proximity in the color space (as opposed to a color space such as CIELAB that is device-independent and equidistant sets of points correspond to pairs of colors that have the same perceptual similarity; \citealp{wyszecki1967}). Further, they did not calibrate their monitor, and so we cannot know the precise colors presented to participants. As \cite{jern2013probabilistic} were interested in relations between the saturation and length of examples in generated into novel categories, this is not an issue for their analyses and results. However, these issues pose a significant challenge to evaluating contrast between the experimenter-defined and participant-generated categories along the hue dimension. It is plausible that two uncalibrated monitors could display the same HSV color and the colors be perceived in different color categories (especially for color boundaries that vary over lightness, such as the yellow-brown boundary).
 
-Although we cannot know the precise colors that were displayed or perceived, we can still analyze their results from a coarse perspective to see whether there is preliminary support for contrast. To do so, we binned all possible hues into one of eight uniformly-spaced color groups: \{{\em Red}: $0-0.063$, $0.938-1$, {\em Yellow}: $0.063-0.188$, {\em Yellow-Green}: $0.188-0.313$, {\em Green-Teal}: $0.313-0.438$, {\em Teal}: $0.438-0.563$, {\em Teal-Blue}: $0.563-0.688$, {\em Purple}: $0.688-0.813$, {\em Pink}: $0.813-0.938$\}. In the \cite{jern2013probabilistic} experiment, the hue of each experimenter-defined category was selected from one of six possible values, each of which falls into one of the color groups above (two color groups was not used as a possible hue for the experimenter-defined categories). By categorizing the participant-generated crystals likewise, we can obtain a broad measure of category contrast by determining the proportion of participant-generated crystals that fall into the same groups as the experimenter-defined categories: If contrast influences the hues of the generated categories, we should observe minimal overlap between in the color groupings.
+Although we cannot know the precise colors that were displayed or perceived, we can still analyze their results from a coarse perspective to see whether there is preliminary support for contrast. To do so, we binned all possible hues into one of eight uniformly-spaced color groups: \{{\em Red}: $0-0.063$, $0.938-1$, {\em Yellow}: $0.063-0.188$, {\em Yellow-Green}: $0.188-0.313$, {\em Green-Teal}: $0.313-0.438$, {\em Teal}: $0.438-0.563$, {\em Teal-Blue}: $0.563-0.688$, {\em Purple}: $0.688-0.813$, {\em Pink}: $0.813-0.938$\}. In the \cite{jern2013probabilistic} experiment, the hue of each experimenter-defined category was selected from one of six possible values, each of which falls into one of the color groups above (two color groups were not used as a possible hue for the experimenter-defined categories). By categorizing the participant-generated crystals likewise, we can obtain a broad measure of category contrast by determining the proportion of participant-generated crystals that fall into the same groups as the experimenter-defined categories: If contrast influences the hues of the generated categories, we should observe minimal overlap between in the color groupings.
 
 
 
@@ -146,7 +146,7 @@ Although we cannot know the precise colors that were displayed or perceived, we 
 
 These data, shown in Figure \ref{fig:jk13-huecontrast}, reveal a clear pattern: The majority of participants in each condition ($n = 22$) generated categories possessing entirely distinct hues; with 0/6 exemplars sharing a hue with the experimenter-defined categories. These results can be compared to the predictions of a Binomial model, which proposes that participants generate hues at random. That is, if hue selection is not systematic, the probability that any given example will lie in the same color group as an experimenter-defined category is given by a Binomial distribution with $p = 2/8=1/4$, as there were two experimenter-defined categories and eight possible color groups. Chi-square goodness-of-fit tests reveal that the observed distribution in each condition is highly inconsistent with the hues being chosen at random, all $\chi^2(6,N=22)>200$, $p<0.001$. Participants tended to generate items that were perceptually distinct from the categories they had learned, and were less likely to generate hues possessed by members of the experimenter-defined categories.
 
-Re-analyzing the results of \cite{jern2013probabilistic} provides preliminary support that contrast plays a role in category generation. Taken alongside the analyses reported by \cite{jern2013probabilistic}, our analysis suggests that generated categories tend to be distinct from {\em and} distributionally similar to what is already known. However, it is worth noting that our analysis is still limited: the color groups defined above are somewhat arbitrary, and it is not clear that our color grouping is consistent with the psychological color boundaries perceived by participants. While we did obtain similar results using a variety of alternative groupings, the hue dimension used in the \cite{jern2013probabilistic} study does not lend itself straightforwardly to the the computation of similarities, and thus we cannot be certain of whether our coding accurately approximates the psychological space of the stimuli. This precludes exemplar modeling of their data as it is necessary to encode exemplars in psychological space to determine the similarity between exemplars. By consequence, although these results likely indicate that contrast exerts {\em some} influence, they do not precisely describe the nature of that influence. In the sections below, we propose a quantitative framework specifying the role of category contrast in creative generation.
+Re-analyzing the results of \cite{jern2013probabilistic} provides preliminary support that contrast plays a role in category generation. Taken alongside the analyses reported by \cite{jern2013probabilistic}, our analysis suggests that generated categories tend to be distinct from {\em and} distributionally similar to what is already known. However, it is worth noting that our analysis is still limited: the color groups defined above are somewhat arbitrary, and it is not clear that our color grouping is consistent with the psychological color boundaries perceived by participants. While we did obtain similar results using a variety of alternative groupings, the hue dimension used in the \cite{jern2013probabilistic} study does not lend itself straightforwardly to the the computation of similarities, and thus we cannot be certain of whether our coding accurately approximates the psychological space of the stimuli. This precludes traditional applications of categorization models to their data as it is usually necessary to encode objects in psychological space in order to accurately determine the similarity between objects. By consequence, although these results likely indicate that contrast exerts {\em some} influence, they do not precisely describe the nature of that influence. In the sections below, we propose a quantitative framework specifying the role of category contrast in creative generation.
 
 
 \subsection{The PACKER Model}
@@ -197,8 +197,7 @@ where $\theta$ ($\theta \geq 0$) is a free parameter controlling response determ
 
 It is worth noting that PACKER is only one possible exemplar-based account of category generation within our proposed framework. That is, PACKER places specific constraints on the possible values of $f(x_j)$, but other exemplar-based category generation models with drastically different behavior can be formalized in this framework by imposing alternative constraints. For example, as will be discussed in more detail below, PACKER is formally equivalent to the copy-and-tweak model proposed by \cite{jern2013probabilistic} when $\gamma = 1$. Likewise, when $\gamma = 0$, PACKER can represent a contrast-only generation mode, relying exclusively on contrast when generating new categories. Finally, when $f(x_j) = -1$ for all $x_j$ (regardless of class membership), a ``pure-packing'' approach is yielded, generating items in unoccupied areas of the domain. Thus, the proposed framework may be used to describe a wide variety of qualitatively distinct generation strategies.
 
-
-It is also worth noting that PACKER represents just one of many possible models that incorporate contrast in category generation. For example, it may be possible to extend \cite{jern2013probabilistic}'s hierarchical Bayesian model to include contrast, this mechanism would be at odds with the standard hierarchical Bayesian framework. In contrast, these ideas emerge naturally from the exemplar view: We have not modified any of the core elements of the GCM in defining the PACKER model, we simply weight exemplar similarity during aggregation. Thus, beyond formally specifying the role of contrast in creative generation, the PACKER account allows us to evaluate the well-understood principles of the exemplar view within the comparatively understudied field of conceptual generation. Nonetheless, we will discuss integrating our approaches in the General Discussion.
+It is also worth noting that PACKER represents just one of many possible models that incorporate contrast in category generation. For example, it may be possible to extend \cite{jern2013probabilistic}'s hierarchical Bayesian model to include contrast, but this mechanism would be at odds with the standard hierarchical Bayesian framework. In contrast, these ideas emerge naturally from the exemplar view: We have not modified any of the core elements of the GCM in defining the PACKER model, we simply weight exemplar similarity during aggregation. Thus, beyond formally specifying the role of contrast in creative generation, the PACKER account allows us to evaluate the well-understood principles of the exemplar view within the comparatively understudied field of conceptual generation. Nonetheless, we will discuss integrating our approaches in the General Discussion.
 
 \subsubsection{Relation Between PACKER and Copy-And-Tweak}
 \label{section:copytweak-packer}
@@ -215,7 +214,7 @@ In the sections below, we present two experiments demonstrating systematic effec
 
 \section{Experiment 1}
 
-To begin our investigation, we sought to extend the early evidence obtained from our analysis of the \cite{jern2013probabilistic} data, under a variety of learning conditions and using more standard stimulus materials. We used an artificial stimulus design, two dimensional domain of squares, varying in color and size (see Figure \ref{fig:e1-conditions}, panel A). These dimensions have been used in numerous classification learning studies \cite[e.g.,][]{conaway2016similar,conaway2016generalization,shepard1961learning,nosofsky1994comparing}. Unlike those used in the \cite{jern2013probabilistic} experiments, distance on the physical dimensions aligns more directly with perceptual similarity, allowing us to evaluate the role of category contrast in creative generation more precisely. To extend the evidence provided by the \cite{jern2013probabilistic} data, we tested the effects of category contrast after learning one category from a set of qualitatively distinct category structures, as shown in Figure \ref{fig:e1-conditions}. 
+To begin our investigation, we sought to extend the early evidence obtained from our analysis of the \cite{jern2013probabilistic} data, under a variety of learning conditions and using more standard stimulus materials. We used an artificial stimulus design: A two dimensional domain of squares, varying in color and size (see Figure \ref{fig:e1-conditions}, panel A). These dimensions have been used in numerous classification learning studies \cite[e.g.,][]{conaway2016similar,conaway2016generalization,shepard1961learning,nosofsky1994comparing}. Unlike those used in the \cite{jern2013probabilistic} experiments, distance on the physical dimensions aligns more directly with perceptual similarity, allowing us to evaluate the role of category contrast in creative generation more precisely. To extend the evidence provided by the \cite{jern2013probabilistic} data, we tested the effects of category contrast after learning one category from a set of qualitatively distinct category structures, as shown in Figure \ref{fig:e1-conditions}. 
 
 Figure \ref{fig:e1-conditions}b-d show the values of exemplar dimensions belonging to the experimenter-defined categories (`A', or `Alpha') that participants were assigned to learn about prior to generating a new category. Each participant learned one of the category types during training. In the `Cluster' type, category A is a tight cluster of examples in the space. Perceptually instantiated, the members of category A might, for example, be large and dark in color. In the `Row' type, category A has a row pattern across the space, varying along one feature but not the other. Thus, its members might all be dark in color but would vary in size. Finally, in the `XOR' type, the experimenter-defined category consists of two clusters separated in opposite corners of the space, conforming to the exclusive-or logical structure (e.g., members are small and dark or large and light). 
 
@@ -242,7 +241,7 @@ Interestingly, the XOR condition also offers a dissociation between the roles of
 
 \subsection{Procedure}
 
-As noted in the introduction of this paper, the task of generating members of a new category can be aligned with common tasks studied in the categorization literature: Whereas classification consists of predicting an object's category label on the basis of its features, inference consists of predicting an observed feature, given a set of observed features and a category label. Generation thus consists of predicting {\em all} features of an object, given a novel category label. In keeping with this insight, we designed our generation task as an extension of the traditional artificial classification learning paradigm. The task differs from traditional work in creative cognition primarily through the use of an artificial domain, which enables the application of computational models. Unlike most previous studies \citep[e.g.,][]{ward1994structured}, participants in our studies have no experience with the domain before the start of the experiment, and the experimenter-defined categories are not hierarchically structured (as are plants and animals).
+As noted in the introduction of this paper, the task of generating members of a new category can be aligned with common tasks studied in the categorization literature: Whereas classification consists of predicting an object's category label on the basis of its features, inference consists of predicting an observed feature, given a set of observed features and a category label. Generation thus consists of predicting {\em all} features of an object, given a novel category label. In keeping with this insight, we designed our generation task as an extension of the traditional artificial classification learning paradigm. The task differs from traditional work in creative cognition primarily through the use of an artificial domain, which enables the application of computational models. The use of an artificial domain also requires the addition of a training phase, during which participants learn about the categories in the domain. As a result,, unlike most previous studies \citep[e.g.,][]{ward1994structured}, participants in our studies have no experience with the domain before the start of the experiment, and the experimenter-defined categories are not hierarchically structured (as are plants and animals).
 
 Participants began the experiment with a short training phase (3 blocks of 4 trials), where they observed exemplars belonging to the `Alpha' category. Participants were instructed to learn as much as they can about the Alpha category, and that they would answer a series of test questions afterwards. On each trial, a single Alpha category exemplar was presented, and participants were given as much time as they desired to observe it before moving on to the next trial. Each block consisted of a single presentation of each of the members of the Alpha category, in a random order. Participants were shown the range of possible colors and sizes prior to training.
 
@@ -304,7 +303,7 @@ In Experiment 1 we sought to extend our analysis of the \cite{jern2013probabilis
 
 Notably, however, we also found that participants who learned an XOR category (composed of exemplars following a positive diagonal, see Figure \ref{fig:e1-conditions}) tended to generate items according to a {\em negative} feature correlation -- the opposite of what was present in the previously learned category. While this may be difficult to account for under existing theoretical approaches (which assume generated categories follow the same distributional structure as known categories), it can be concisely explained from a category contrast perspective. Specifically, within the XOR condition, individuals who seek to generate a category that is perceptually distinct from what is already known are left with only the upper-left and bottom-right quadrants of the space, as members of the previously-learned XOR category lie in the bottom-left and top-right. If examples are generated into both of the available quadrants, the generated category will possess a strongly negative correlation, opposing that of the experimenter-defined class.
 
-Thus, the core results of Experiment 1 indicate that generated categories can systematically differ from what we would expect based on prior work. The negative (or zero) correlations observed in the XOR condition suggests an interesting interaction between contrasting from a given category and emulating statistical properties. That is, the constraints on creative generation imposed by category contrast may not simply influence the {\em location} of generated categories, but also their distributional structure. In Experiment 2, we test this claim more systematically.
+Thus, the core results of Experiment 1 indicate that generated categories can systematically differ from what we would expect based on prior work. The negative (or null) correlations observed in the XOR condition suggests an interesting interaction between contrasting from a given category and emulating statistical properties. That is, the constraints on creative generation imposed by category contrast may not simply influence the {\em location} of generated categories, but also their distributional structure. In Experiment 2, we test this claim more systematically.
 
 
 \section{Experiment 2}
@@ -429,7 +428,7 @@ To obtain a global measure of the quality of each model's account, we fitted the
 \end{table}
 
 
-Table \ref{table:global-model-fits} contains the results of this fitting procedure. Due to the uneven number of fitted parameters among the models, we compare the model fits using the Akaike Information Criterion \citep[AIC;][]{akaike1974new}, where smaller values correspond to better fits (discounted by the number of parameters). The same qualitative results were obtained with alternative model comparison metrics (e.g., BIC, \citealp{schwarz1978estimating}; $AIC_C$, \citealp{hurvich1989regression}) 
+Table \ref{table:global-model-fits} contains the results of this fitting procedure. Due to the uneven number of fitted parameters among the models, we compare the model fits using the Akaike Information Criterion \citep[AIC;][]{akaike1974new}, where smaller values correspond to better fits (discounted by the number of parameters). The same qualitative results were obtained with alternative model comparison metrics (e.g., BIC, \citealp{schwarz1978estimating}; $AIC_C$, \citealp{hurvich1989regression}).
 
 Table \ref{table:global-model-fits} contains the AIC values of each model's best fit, as well as the corresponding log-likelihood ($L$) and the best-fitting parameter values. These results reveal strong model differentiation: The PACKER model achieved far better fits compared to the copy-and-tweak and hierarchical Bayesian models, and copy-and-tweak performed somewhat better than the hierarchical Bayesian model. While PACKER's advantage may tentatively be attributed to the model's sensitivity to category contrast (this will be explored in detail below), the advantage shown by copy-and-tweak over the hierarchical Bayesian model may be attributed to its exemplar-based representation, as opposed to the prototype-based representation assumed by the hierarchical Bayesian model. As observed in Figures \ref{fig:e1-samples} and \ref{fig:e2-samples}, the generated categories we observed were often widely distributed, with no items near the category prototype. This aspect of the data is inconsistent with the multivariate normal distributions used to represent categories in the \cite{jern2013probabilistic} model, but can be handled easily using an exemplar-based approach. 
 
@@ -494,7 +493,6 @@ where $\mu_0$ is the prior mean, $\nu_0$ is a prior scale parameter (controlling
     \begin{center}
     \inputpgf{figs/}{range-diff-gradients.pgf}
     \caption{Behavioral and simulated range difference gradients. Each panel shows, for each stimulus, the dimensional orientation of the categories it was generated into: vertically aligned `columns' (orange) versus horizontally aligned `rows' (purple).}
-    \nbcnote{Need to run this on lando with many more samples. current = 30}
     \label{fig:range-diff-gradients}
     \end{center}
 \end{figure}
@@ -552,9 +550,9 @@ Similarly, PACKER may offer an additional interpretation of existing accounts of
 
 \subsection{Limitations and Future Directions}
 
-Although successful in explaining our results, PACKER does not provide a full account of what is known about category generation. Most notably, in this paper we have not evaluated the model's ability to explain the classic finding that generated categories tend to share distributional commonalities with previously learned categories \citep[see][]{jern2013probabilistic,ward1994structured}. While we successfully replicated this effect in Experiment 1, we also found that its influence was limited in comparison to the fundamental constraints imposed by  category contrast. Even within Experiment 1, we found systematic inconsistencies: by generating exemplars into unoccupied regions of the space, participants who learned an `XOR' category, composed of members that are widely distributed along both features and are positively correlated in space, tended to generate categories with an opposite (negative) correlation. More generally, PACKER's success over the hierarchical Bayesian model indicates that the emulation of distributional structure exerts only a limited influence in comparison to category contrast in some situations.
+Although successful in explaining our results, PACKER does not provide a full account of what is known about category generation. Most notably, in this paper we have not evaluated the model's ability to explain the classic finding that generated categories tend to share distributional commonalities with previously learned categories \citep[see][]{jern2013probabilistic,ward1994structured}. While we successfully replicated this effect in Experiment 1, we also found that its influence was limited in comparison to the fundamental constraints imposed by category contrast. Even within Experiment 1, we found systematic inconsistencies: by generating exemplars into unoccupied regions of the space, participants who learned an `XOR' category, composed of members that are widely distributed along both features and are positively correlated in space, tended to generate categories with an opposite (negative) correlation. More generally, PACKER's success over the hierarchical Bayesian model indicates that the emulation of distributional structure exerts only a limited influence in comparison to category contrast in some situations.
 
-Nonetheless, these classic effects are a core element of the phenomenology of creative generation, and PACKER does not include any mechanisms that explain them. Instead, through the development and evaluation of the PACKER model, we have sought to add new elements into such a phenomenology: The broad and strong influence of category contrast, and the interdependence between category location and distributional structure. It may be possible to combine the hierarchical Bayesian approach proposed by \cite{jern2013probabilistic} with PACKER's underlying claims to obtain a ``best of both worlds'' model, capable of explaining the role of contrast in creative generation, as well as the emulation of distributional structure. However, as noted in the introduction, the incorporation of category contrast is antithetical to the core principles of a traditional, semi-conjugate Bayesian approach. This suggests that category generation is a fundamentally different computational-level problem \citep[different from those posed by][]{jern2013probabilistic,kemp2014taxonomy}. Characterizing that problem and conducting a rational analysis is an important direction for future research. To that aim, we plan to explore the connection between exemplar modeling as an Importance Sampling approximation \citep{shi10exemplar}, and see what sort of computational-level problem PACKER approximates. Once formalized in probabilistic terms, it should also be straightforward to incorporate distributional factors into the model. Alternatively, it may be possible to integrate the core principles of PACKER into other categorization models, such as SUSTAIN \citep{lovemg04} or DIVA \citep{}.
+Nonetheless, these classic effects are a core element of the phenomenology of creative generation, and PACKER does not include any mechanisms that explain them. Instead, through the development and evaluation of the PACKER model, we have sought to add new elements into such a phenomenology: The broad and strong influence of category contrast, and the interdependence between category location and distributional structure. It may be possible to combine the hierarchical Bayesian approach proposed by \cite{jern2013probabilistic} with PACKER's underlying claims to obtain a ``best of both worlds'' model, capable of explaining the role of contrast in creative generation, as well as the emulation of distributional structure. However, as noted in the introduction, the incorporation of category contrast is antithetical to the core principles of a traditional, semi-conjugate Bayesian approach. This suggests that category generation is a fundamentally different computational-level problem \citep[different from those posed by][]{jern2013probabilistic,kemp2014taxonomy}. Characterizing that problem and conducting a rational analysis is an important direction for future research. To that aim, we plan to explore the connection between exemplar modeling as an Importance Sampling approximation \citep{shi10exemplar}, and see what sort of computational-level problem PACKER approximates. Once formalized in probabilistic terms, it should also be straightforward to incorporate distributional factors into the model. Alternatively, it may be possible to integrate the core principles of PACKER into other categorization models \citep[e.g.,][]{love2004sustain,kurtz2015human,smith2000thirty}.
 
 Finally, although an overall goal of this work is to advance the study of creative thought by explaining generation through the empirical and quantitative approaches from research in categorization, these approaches are not easily aligned with many of the alternative theoretical viewpoints in the broader study of creativity \citep[for a review see][]{kozbelt2010theories}, such as those based on free association \citep{mednick1962associative} and conceptual combination \citep{estes2002emergence,murphy1988comprehending}. Instead, we reduced our focus by studying a highly complex behavior (creative generation) as it applies within a well-established domain (artificial category learning). We hope that future work incorporates and highlights the importance of contrast into theories of creativity.
 
@@ -586,7 +584,7 @@ Previous versions of this work were presented at the Thirty-Ninth Annual Confere
 
 \cite{jern2013probabilistic} demonstrated how a hierarchical Bayesian model could explain the distributional correspondences between observed and generated categories. In their model, exemplars of generated category were viewed as samples from a multivariate Normal distribution over the dimensions of stimulus space. The mean of the generated category was independent of the observed categories, but the covariance matrix (encoding feature variances and correlations) was based on a common prior distribution. Generating a new category was thus completed by sampling a new category mean (uniform over stimulus space) and covariance matrix from the common prior distribution. Because the shared prior distribution's parameters were unobserved, the hierarchical Bayesian approach was used to infer its parameters from the previous categories (their feature variances and correlations), and then to generate the covariance matrix of the new category.
 
-In our implementation of their model\footnote{Note that \citet{jern2013probabilistic}'s model is slightly different, as they used a semi-conjugate model. Their model acts very similar to our version of it and receives comparable fits.}, each category's exemplars are viewed as samples from a multivariate Normal distribution with parameters ($\mu, \Sigma$). Category covariance matrices (specifying variance and covariance along $k$-dimensions, are assumed to be Normal-Inverse-Wishart distributed with parameters: $\nu$ ($>k-1$), $\kappa$ ($>0$), and $\Sigma_D$. $\nu$ and $\kappa$ are treated as free parameters in our simulations, and $\Sigma_D$ is the domain-wide covariance matrix from which all categories are viewed as samples. Assuming a given $\Sigma_D$, a category covariance matrix $\Sigma$ can be computed on the basis of its examples:
+In our implementation of their model\footnote{Note that \citet{jern2013probabilistic}'s model is slightly different, as they used a semi-conjugate model. Their model acts very similarly to our version.}, each category's exemplars are viewed as samples from a multivariate Normal distribution with parameters ($\mu, \Sigma$). Category covariance matrices (specifying variance and covariance along $k$-dimensions), are assumed to be Normal-Inverse-Wishart distributed with parameters: $\nu$ ($>k-1$), $\kappa$ ($>0$), and $\Sigma_D$. $\nu$ and $\kappa$ are treated as free parameters in our simulations, and $\Sigma_D$ is the domain-wide covariance matrix from which all categories are viewed as samples. Assuming a given $\Sigma_D$, a category covariance matrix $\Sigma$ can be computed on the basis of its examples:
 
 \begin{equation}
 \Sigma = \left[ \Sigma_D \nu + C +
