added kjk passages, ready for joe's lookover

--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -532,6 +532,7 @@ In addition to an analysis of published data \citep[][Experiment 3]{jern2013prob
 We conducted simulations comparing PACKER's account of our results to the other major proposals for category generation: a ``copy-and-tweak'' model (realized as a variant of PACKER with no sensitivity to category contrast), and a hierarchical Bayesian model designed to explain the classic distributional similarity effect. In all simulations, we found that PACKER's sensitivity to contrast captured a previously unexplained and unexplored aspect of human category generation. Further, by measuring PACKER's fit as a function of its prioritization of within- and between-category similarity, we observed that considering either constraint exclusively results in a relatively low-quality account. Instead, PACKER's best results were obtained when both constraints are considered, indicating that human learners do not generate novel concepts exclusively on the basis of within-category similarity or between class-contrast. This finding mirrors our behavioral results and demonstrates that both constraints influence creative generation. 
 
 \subsection{Similarity and Contrast in Cognition}
+
 The proposal that category contrast is a primary constraint in creative generation is, in some ways, entirely commonsense. To successful create something \textit{new}, it must be different from what is known. Beyond its role in creative generation, category contrast is also of fundamental importance in categorization more broadly. All other factors held constant, new categories are easier to learn if they are dissimilar to members of other categories, and knowledge of highly distinct categories is applied more accurately than that of ill-defined categories \citep{ashby1994categorization,imai1965discriminability}. Likewise, basic-level categories \citep{rosch1976basic} are thought to be abstracted in order to maximize within-category similarity while minimizing between-category similarity. Finally, the act of forming category representations affects similarity judgments about category members and nonmembers, with category members being viewed as more similar to one another than members of other categories \citep{goldstone1994influences,goldstone2001altering}.
 
 Beyond categorization, one can find instances of the trade-off between within and between-class similarity in linguistic categories over perceptual dimensions. For example, \cite{regier2007} showed that the partitioning of color categories reflects such a trade-off in a psychological space -- colors are partitioned into groups with members that are viewed as highly similar to one another yet distinct from other colors. A similar trade-off can be observed in phoneme categories. Different exemplars of the same phoneme must be similar to one another, while contrasting from other phonemes, such that a listener can infer the appropriate phoneme. This pattern has been found and modeled in the natural acoustics of American English vowels \citep{feldman2013,hillenbrand1995}. As linguistic categories must have been created at some point in human history, it is revealing that the constraints of emulating distributional structure across categories and having categories contrast from one another still bias human category generation today.
@@ -547,6 +548,13 @@ In addition to demonstrating the utility of formal modeling in the study creativ
 
 Similarly, PACKER may offer an additional interpretation of existing accounts of creative generation. Most notably, a leading account within the creative cognition literature, the Path of Least Resistance \citep{ward1994structured,ward1995s}, also explains generation in terms of an exemplar-based retrieval process. This account was designed to explain the creative generation of natural categories (e.g., new species of plants and animals) and as a result relies strongly on the hierarchical organization of these categories: individuals are thought to retrieve an example of the higher-level category being generated (e.g., \textit{bird} may be retrieved from the category \textit{animal}), and then systematically alter what was retrieved to make something new. As the PACKER model does not assume knowledge is hierarchically organized \citep[this is true of the exemplar view more broadly, see][]{murphy2016exemplar}, the model may be viewed as a formal instantiation of the Path of Least Resistance for application in a traditional artificial categorization domain (in which there is no established hierarchy of categories). PACKER's success in explaining generation within an artificial domain motivates future work exploring the nature of category contrast within a more naturalistic setting.
 
+\subsection{Implications For Categorization}
+
+Although our work has mainly addressed the processes involved in the creative generation of  concepts, in this paper we have studied these processes as they apply within an artificial categorization domain. By consequence, our findings also provide an advance in our understanding categorization more broadly.
+
+Categorization research addresses the representations and processes that underlie the learning and use of categories. Category learning tasks are generally about figuring out which items belong to which category. Once learned, categories are generally used to classify new stimuli and to make inferences beyond the available information. Our work is fairly unique in that people learn a single category through positive examples and then figure out another category that would make sense in the domain. In other words, only one category is provided to be learned and the use that is required of that category is to generate a contrast category. Such propagating of categories (producing one from another) may not seem like a fundamental or ubiquitous cognitive activity, but consider navigating a highly unfamiliar environment —  it would be practical, perhaps even critical, to generate expectations about what other kinds of things you are likely to encounter based on those that you already have. In the present studies, we have learned something about the form that such expectations are likely to take. 
+
+We can think of the category generation task in our studies as asking a person to formulate an idea about what set of items in the domain are most interestingly not members of the original category. To meet this condition, the items must take some form of coherence that aligns with that of the original category and some form of distinctiveness relative to the original category. Reflecting the basic level of organization in natural categories, it makes sense to generate a set of items that possess strong within-category coherence (by importing or systematically transforming the internal structure of the original category) as well as strong between-category differentiation (by creating maximum contrast with the original category). In this sense one can see the patterns of performance in the category generation task as recapitulating the order of semantic organization.
 
 \subsection{Limitations and Future Directions}
 
