--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -248,18 +248,18 @@
 }
 
 @article{kruschke1992alcove,
-  title={ALCOVE: An exemplar-based connectionist model of category learning.},
+  title={{ALCOVE}: An exemplar-based connectionist model of category learning.},
   author={Kruschke, John K},
-  journal={Psychological review},
+  journal={Psychological Review},
   volume={99},
   number={1},
-  pages={22},
+  pages={22--44},
   year={1992},
   publisher={American Psychological Association}
 }
 
 @article{kurtz2007divergent,
-  title={The divergent autoencoder (DIVA) model of category learning},
+  title={The divergent autoencoder ({DIVA}) model of category learning},
   author={Kurtz, Kenneth J},
   journal={Psychonomic Bulletin \& Review},
   volume={14},
@@ -280,7 +280,7 @@
 }
 
 @article{kurtz2013human,
-  title={Human learning of elemental category structures: Revising the classic result of Shepard, Hovland, and Jenkins (1961).},
+  title={Human learning of elemental category structures: Revising the classic result of {S}hepard, {H}ovland, and {J}enkins (1961).},
   author={Kurtz, Kenneth J and Levering, Kimery R and Stanton, Roger D and Romero, Joshua and Morris, Steven N},
   journal={Journal of Experimental Psychology: Learning, Memory, and Cognition},
   volume={39},
@@ -291,12 +291,12 @@
 }
 
 @article{love2004sustain,
-  title={SUSTAIN: a network model of category learning.},
+  title={{SUSTAIN}: a network model of category learning.},
   author={Love, Bradley C and Medin, Douglas L and Gureckis, Todd M},
   journal={Psychological review},
   volume={111},
   number={2},
-  pages={309},
+  pages={309--332},
   year={2004},
   publisher={American Psychological Association}
 }
@@ -304,7 +304,7 @@
 @article{luce1977choice,
   title={The choice axiom after twenty years},
   author={Luce, R Duncan},
-  journal="Journal of mathematical psychology",
+  journal="Journal of Mathematical Psychology",
   volume={15},
   number={3},
   pages={215--233},
@@ -335,10 +335,10 @@
 @article{markman2003category,
   title={Category use and category learning.},
   author={Markman, Arthur B and Ross, Brian H},
-  journal={Psychological bulletin},
+  journal={Psychological Bulletin},
   volume={129},
   number={4},
-  pages={592},
+  pages={592--613},
   year={2003},
   publisher={American Psychological Association}
 }
@@ -368,7 +368,7 @@
   journal={Psychological Review},
   volume={85},
   number={3},
-  pages={207},
+  pages={207--238},
   year={1978},
   publisher={American Psychological Association}
 }
@@ -376,10 +376,10 @@
 @article{mednick1962associative,
   title={The associative basis of the creative process.},
   author={Mednick, Sarnoff},
-  journal={Psychological review},
+  journal={Psychological Review},
   volume={69},
   number={3},
-  pages={220},
+  pages={220--232},
   year={1962},
   publisher={American Psychological Association}
 }
@@ -387,7 +387,7 @@
 @article{murphy1988comprehending,
   title={Comprehending complex concepts},
   author={Murphy, Gregory L},
-  journal={Cognitive science},
+  journal={Cognitive Science},
   volume={12},
   number={4},
   pages={529--562},
@@ -398,7 +398,7 @@
 @article{murphy2016exemplar,
   title={Is there an exemplar theory of concepts?},
   author={Murphy, Gregory L},
-  journal={Psychonomic bulletin \& Review},
+  journal={Psychonomic Bulletin \& Review},
   volume={23},
   number={4},
   pages={1035--1042},
@@ -420,7 +420,7 @@
   journal="Journal of Experimental Psychology: Learning, Memory, \& Cognition",
   volume={10},
   number={1},
-  pages={104},
+  pages={104--114},
   year={1984},
   publisher={American Psychological Association}
 }
@@ -431,7 +431,7 @@
   journal={Journal of Experimental Psychology: General},
   volume={115},
   number={1},
-  pages={39},
+  pages={39--57},
   year={1986},
   publisher={American Psychological Association}
 }
@@ -491,7 +491,7 @@
   journal="Journal of Experimental Psychology: General",
   volume={104},
   number={3},
-  pages={192},
+  pages={192--233},
   year={1975},
   publisher={American Psychological Association}
 }
@@ -510,7 +510,7 @@
 @article{schwarz1978estimating,
   title={Estimating the dimension of a model},
   author={Schwarz, Gideon},
-  journal={The annals of statistics},
+  journal={The Annals of Statistics},
   volume={6},
   number={2},
   pages={461--464},
@@ -536,7 +536,7 @@
   journal={Psychological Monographs: General and Applied},
   volume={75},
   number={13},
-  pages={1},
+  pages={1--42},
   year={1961},
   publisher={American Psychological Association}
 }
@@ -578,7 +578,7 @@
   journal={Journal of Experimental Psychology: Learning, Memory, and Cognition},
   volume={26},
   number={1},
-  pages={3},
+  pages={3--27},
   year={2000},
   publisher={American Psychological Association}
 }
